# polymarket-nba-oracle

./: .env.example  .gitignore  Dockerfile  README.md  celery_app.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 03e019a39519_made_event_slug_unique_constraint.py  0788688536db_split_prices_into_buy_sell.py  142ef8743284_created_indexes.py  1b8a4664af2e_changed_price_fields_in_nba_prices_to_.py  2279ebcf4357_removed_unnescessary_index.py  2e829d8ead37_made_unique_constraints_in_nba_games.py  3415beda879b_changed_nba_prices_timestamp_field_type.py  39a32dd3cad3_changed_nullable_fields.py  44bc2cf6acba_removed_duplicate_fields.py  47ec82af50c0_created_initial_schema.py  505d38e78a31_created_normilized_nba_games_game_status.py  534fc023c119_made_nba_markets_market_end_nullable.py  6205f03e481c_rename_nba_tables_to_generic_domain_.py  761afec2dccc_mage_game_scores_nullable.py  8e64a6f0dd55_changed_nba_prices_fields_types.py  9ed9a7435661_nba_games_game_status_game_period_.py  aaab30fefff7_rename_constraints_to_new_naming.py  abb6767430d2_made_nba_games_game_status_non_nullable.py  b859206e71b1_created_market_orders_table.py  b960f4152f1b_make_game_scores_nullable.py  ba89ceaaabfe_update_nba_market_models.py  ba94f168b95a_make_game_scores_nullable.py  be639477ebf8_removed_before_update_event_from_nba_.py  c3b2aee0ea54_make_game_scores_nullable.py  e0fb74cef058_removed_nullable_fields_in_nba_markets.py  eb722c5706dc_create_market_tables.py  f8cff05e6324_added_autoincrementing_pks.py
src/: config.py  logger.py  workers.py
src/core/: api.py  clients.py  conflicts.py  dump.py  errors.py  load.py  loaders.py  loading.py  parse.py  parser.py  parsing.py  processing.py  updater.py  updaters.py  updating.py  validation.py
src/database/: __init__.py  connection.py  models.py  repos.py
src/markets/: clients.py  errors.py  loaders.py  parsers.py  schemas.py  updater.py
src/queue/: connection.py  consumer.py  producer.py
src/service/: clients.py  domain.py  parsers.py  repos.py  schemas.py  tasks.py  update.py  updater.py
src/service/domain/: games.py  markets.py
src/service/dumping/: clients.py
src/service/etl/: update.py
src/service/etl/games/: __init__.py  client.py  parser.py  schema.py  update.py
src/service/etl/markets/: __init__.py  client.py  parser.py  schema.py  update.py
src/service/etl/prices/: __init__.py  client.py  parser.py  schema.py  update.py
src/service/games/: clients.py  parsers.py  schemas.py  updater.py
src/service/loading/: repos.py  tasks.py
src/service/markets/: clients.py  parsers.py  schemas.py  updater.py
src/service/parsing/: parsers.py  schemas.py  teams.py
src/service/prices/: clients.py  parsers.py  schemas.py  updater.py
src/workers/: handler.py  tasks.py
