[project]
name = "polymarket-nba-oracle"
version = "0.1.0"
description = ""
authors = [
    { name = "etchedheadplate", email = "94640304+etchedheadplate@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "aio-pika==9.6.1",
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiolimiter==1.2.1",
    "aiormq==6.9.3",
    "aiosignal==1.4.0",
    "alembic==1.17.2",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asyncpg==0.31.0",
    "attrs==25.4.0",
    "billiard==4.2.4",
    "bitarray==3.8.0",
    "black>=26.3.1,<27",
    "certifi==2025.11.12",
    "cfgv==3.5.0",
    "charset-normalizer==3.4.4",
    "ckzg==2.1.5",
    "click==8.3.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "coverage==7.13.1",
    "cytoolz==1.1.0",
    "distlib==0.4.0",
    "eth-abi==6.0.0b1",
    "eth-account==0.13.7",
    "eth-hash==0.7.1",
    "eth-keyfile==0.8.1",
    "eth-keys==0.7.0",
    "eth-rlp==2.2.0",
    "eth-typing==5.2.1",
    "eth-utils==5.3.1",
    "filelock==3.20.1",
    "frozenlist==1.8.0",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hexbytes==1.3.1",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "identify==2.6.15",
    "idna==3.11",
    "iniconfig==2.3.0",
    "kombu==5.6.2",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "nodeenv==1.10.0",
    "numpy==2.4.0",
    "packaging==25.0",
    "pamqp==3.3.0",
    "pandas==2.3.3",
    "parsimonious==0.10.0",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "poly-eip712-structs==0.0.1",
    "pre-commit==4.5.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psycopg2-binary==2.9.11",
    "py-builder-signing-sdk==0.0.2",
    "py-clob-client==0.34.1",
    "py-order-utils==0.3.2",
    "pycryptodome==3.23.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rlp==4.1.0",
    "six==1.17.0",
    "sqlalchemy==2.0.45",
    "sqlalchemy-utils==0.42.1",
    "toolz==1.1.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "urllib3==2.6.2",
    "vine==5.1.0",
    "virtualenv==20.35.4",
    "wcwidth==0.6.0",
    "yarl==1.22.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.7,<0.16.0)",
    "pyright (>=1.1.408,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
]

[tool.setuptools]
packages = []

[tool.black]
line-length = 120
target-version = [
    "py312",
]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.pyright]
include = [
    ".",
]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
